--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -142,31 +142,31 @@
         "\n",
         "    # Predicts ratings for left-out ratings only\n",
         "    print(\"Predict ratings for left-out set...\")\n",
-        "    leftOutPredictions = algo.test(test_set)\n",
+        "    loo_validation_set = algo.test(test_set)\n",
         "\n",
         "    # Build predictions for all ratings not in the training set\n",
         "    print(\"Predict all missing ratings...\")\n",
-        "    bigTestSet = train_set.build_anti_testset()\n",
-        "    allPredictions = algo.test(bigTestSet)\n",
+        "    anti_test_set = train_set.build_anti_testset()\n",
+        "    all_preds = algo.test(anti_test_set)\n",
         "\n",
         "    # Compute top 10 recs for each user\n",
         "    print(\"Compute top 10 recs per user...\")\n",
-        "    topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
+        "    top_n_preds = RecommenderMetrics.GetTopN(all_preds, n=10)\n",
         "\n",
         "    # See how often we recommended a movie the user actually rated\n",
-        "    print(\"\\nHit Rate: \", RecommenderMetrics.HitRate(topNPredicted, leftOutPredictions))\n",
+        "    print(\"\\nHit Rate: \", RecommenderMetrics.HitRate(top_n_preds, loo_validation_set))\n",
         "\n",
         "    # Break down hit rate by rating value\n",
         "    print(\"\\nrHR (Hit Rate by Rating value): \")\n",
-        "    RecommenderMetrics.RatingHitRate(topNPredicted, leftOutPredictions)\n",
+        "    RecommenderMetrics.RatingHitRate(top_n_preds, loo_validation_set)\n",
         "\n",
         "    # See how often we recommended a movie the user actually liked\n",
         "    print(\"\\ncHR (Cumulative Hit Rate, rating >= 4): \", \n",
-        "          RecommenderMetrics.CumulativeHitRate(topNPredicted, leftOutPredictions, 4.0))\n",
+        "          RecommenderMetrics.CumulativeHitRate(top_n_preds, loo_validation_set, 4.0))\n",
         "\n",
         "    # Compute ARHR\n",
         "    print(\"\\nARHR (Average Reciprocal Hit Rank): \", \n",
-        "          RecommenderMetrics.AverageReciprocalHitRank(topNPredicted, leftOutPredictions))"
+        "          RecommenderMetrics.AverageReciprocalHitRank(top_n_preds, loo_validation_set))"
       ]
     },
     {
@@ -183,24 +183,24 @@
       "outputs": [],
       "source": [
         "algo.fit(fullTrainSet)\n",
-        "bigTestSet = fullTrainSet.build_anti_testset()\n",
-        "allPredictions = algo.test(bigTestSet)\n",
-        "topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
+        "anti_test_set = fullTrainSet.build_anti_testset()\n",
+        "all_preds = algo.test(anti_test_set)\n",
+        "top_n_preds = RecommenderMetrics.GetTopN(all_preds, n=10)\n",
         "\n",
         "# Print user coverage with a minimum predicted rating of 4.0:\n",
-        "print(\"User coverage: \", RecommenderMetrics.UserCoverage(topNPredicted, fullTrainSet.n_users, ratingThreshold=4.0))\n",
+        "print(\"User coverage: \", RecommenderMetrics.UserCoverage(top_n_preds, fullTrainSet.n_users, ratingThreshold=4.0))\n",
         "\n",
         "# Measure diversity of recommendations:\n",
-        "print(\"\\nDiversity: \", RecommenderMetrics.Diversity(topNPredicted, simsAlgo))\n",
+        "print(\"\\nDiversity: \", RecommenderMetrics.Diversity(top_n_preds, simsAlgo))\n",
         "\n",
         "# Measure novelty (average popularity rank of recommendations):\n",
-        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.Novelty(topNPredicted, rankings))"
+        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.Novelty(top_n_preds, rankings))"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "RecSys",
       "language": "python",
       "name": "python3"
     },
@@ -214,7 +214,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.11"
     }
   },
   "nbformat": 4,
