--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -184,9 +184,9 @@
         "data = lens.load_movielens_data()\n",
         "\n",
         "print (\"\\nWe recommend:\")\n",
-        "for userID, movieID, actualRating, estimatedRating, _ in predictions:\n",
-        "    intMovieID = int(movieID)\n",
-        "    recommendations.append((intMovieID, estimatedRating))\n",
+        "for user_id, movie_id, true_rating, predicted_rating, _ in predictions:\n",
+        "    intMovieID = int(movie_id)\n",
+        "    recommendations.append((intMovieID, predicted_rating))\n",
         "\n",
         "recommendations.sort(key=lambda x: x[1], reverse=True)\n",
         "\n",
