--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -74,10 +74,10 @@
         "ml, data, rankings  = MovieLens.load()\n",
         "\n",
         "print(\"\\nComputing item similarities so we can measure diversity later...\")\n",
-        "fullTrainSet = data.build_full_trainset()\n",
-        "sim_options = {'name': 'pearson_baseline', 'user_based': False}\n",
-        "simsAlgo = KNNBaseline(sim_options=sim_options)\n",
-        "simsAlgo.fit(fullTrainSet)"
+        "full_train_set = data.build_full_trainset()\n",
+        "knn_options = {'name': 'pearson_baseline', 'user_based': False}\n",
+        "similarities_model = KNNBaseline(sim_options=knn_options)\n",
+        "similarities_model.fit(full_train_set)"
       ]
     },
     {
@@ -114,8 +114,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "print(\"RMSE: \", RecommenderMetrics.RMSE(predictions))\n",
-        "print(\"MAE: \", RecommenderMetrics.MAE(predictions))"
+        "print(\"RMSE: \", RecommenderMetrics.rmse(predictions))\n",
+        "print(\"MAE: \", RecommenderMetrics.mae(predictions))"
       ]
     },
     {
@@ -132,9 +132,9 @@
       "outputs": [],
       "source": [
         "# Set aside one rating per user for testing\n",
-        "LOOCV = LeaveOneOut(n_splits=1, random_state=1)\n",
+        "loo_iterator = LeaveOneOut(n_splits=1, random_state=1)\n",
         "\n",
-        "for train_set, test_set in LOOCV.split(data):\n",
+        "for train_set, test_set in loo_iterator.split(data):\n",
         "    print(\"Computing recommendations with leave-one-out...\")\n",
         "\n",
         "    # Train model without left-out ratings\n",
@@ -151,22 +151,22 @@
         "\n",
         "    # Compute top 10 recs for each user\n",
         "    print(\"Compute top 10 recs per user...\")\n",
-        "    top_n_preds = RecommenderMetrics.GetTopN(all_preds, n=10)\n",
+        "    top_n_preds = RecommenderMetrics.get_top_n(all_preds, n=10)\n",
         "\n",
         "    # See how often we recommended a movie the user actually rated\n",
-        "    print(\"\\nHit Rate: \", RecommenderMetrics.HitRate(top_n_preds, loo_validation_set))\n",
+        "    print(\"\\nHit Rate: \", RecommenderMetrics.hit_rate(top_n_preds, loo_validation_set))\n",
         "\n",
         "    # Break down hit rate by rating value\n",
         "    print(\"\\nrHR (Hit Rate by Rating value): \")\n",
-        "    RecommenderMetrics.RatingHitRate(top_n_preds, loo_validation_set)\n",
+        "    RecommenderMetrics.rating_hit_rate(top_n_preds, loo_validation_set)\n",
         "\n",
         "    # See how often we recommended a movie the user actually liked\n",
         "    print(\"\\ncHR (Cumulative Hit Rate, rating >= 4): \", \n",
-        "          RecommenderMetrics.CumulativeHitRate(top_n_preds, loo_validation_set, 4.0))\n",
+        "          RecommenderMetrics.cumulative_hit_rate(top_n_preds, loo_validation_set, 4.0))\n",
         "\n",
         "    # Compute ARHR\n",
         "    print(\"\\nARHR (Average Reciprocal Hit Rank): \", \n",
-        "          RecommenderMetrics.AverageReciprocalHitRank(top_n_preds, loo_validation_set))"
+        "          RecommenderMetrics.average_reciprocal_hit_rank(top_n_preds, loo_validation_set))"
       ]
     },
     {
@@ -182,19 +182,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "algo.fit(fullTrainSet)\n",
-        "anti_test_set = fullTrainSet.build_anti_testset()\n",
+        "algo.fit(full_train_set)\n",
+        "anti_test_set = full_train_set.build_anti_testset()\n",
         "all_preds = algo.test(anti_test_set)\n",
-        "top_n_preds = RecommenderMetrics.GetTopN(all_preds, n=10)\n",
+        "top_n_preds = RecommenderMetrics.get_top_n(all_preds, n=10)\n",
         "\n",
         "# Print user coverage with a minimum predicted rating of 4.0:\n",
-        "print(\"User coverage: \", RecommenderMetrics.UserCoverage(top_n_preds, fullTrainSet.n_users, ratingThreshold=4.0))\n",
+        "print(\"User coverage: \", RecommenderMetrics.user_coverage(top_n_preds, full_train_set.n_users, rating_threshold=4.0))\n",
         "\n",
         "# Measure diversity of recommendations:\n",
-        "print(\"\\nDiversity: \", RecommenderMetrics.Diversity(top_n_preds, simsAlgo))\n",
+        "print(\"\\nDiversity: \", RecommenderMetrics.diversity(top_n_preds, similarities_model))\n",
         "\n",
         "# Measure novelty (average popularity rank of recommendations):\n",
-        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.Novelty(top_n_preds, rankings))"
+        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.novelty(top_n_preds, rankings))"
       ]
     }
   ],
