--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -62,7 +62,7 @@
       "outputs": [],
       "source": [
         "# Get the leave-one-out training set\n",
-        "train_set = evalData.GetLOOCVTrainSet()\n",
+        "train_set = evalData.loo_train_set\n",
         "\n",
         "# Configure and train the model\n",
         "sim_options = {\n",
@@ -72,7 +72,7 @@
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
         "model.fit(train_set)\n",
-        "simsMatrix = model.compute_similarities()"
+        "similarity_matrix = model.compute_similarities()"
       ]
     },
     {
@@ -94,43 +94,43 @@
       "outputs": [],
       "source": [
         "# Get the leave-one-out test set\n",
-        "leftOutTestSet = evalData.GetLOOCVTestSet()\n",
+        "loo_test_set = evalData.loo_test_set\n",
         "\n",
         "# Generate recommendations for each user\n",
-        "topN = defaultdict(list)\n",
+        "top_n = defaultdict(list)\n",
         "k = 10\n",
         "\n",
         "for uiid in range(train_set.n_users):\n",
         "    # Get top N similar users\n",
-        "    similarityRow = simsMatrix[uiid]\n",
+        "    similarityRow = similarity_matrix[uiid]\n",
         "    \n",
-        "    similarUsers = []\n",
-        "    for innerID, score in enumerate(similarityRow):\n",
-        "        if (innerID != uiid):\n",
-        "            similarUsers.append((innerID, score))\n",
+        "    similar_users = []\n",
+        "    for inner_id, score in enumerate(similarityRow):\n",
+        "        if (inner_id != uiid):\n",
+        "            similar_users.append((inner_id, score))\n",
         "    \n",
-        "    kNeighbors = heapq.nlargest(k, similarUsers, key=lambda t: t[1])\n",
+        "    k_neighbours = heapq.nlargest(k, similar_users, key=lambda t: t[1])\n",
         "    \n",
         "    # Get items rated by similar users\n",
         "    candidates = defaultdict(float)\n",
-        "    for similarUser in kNeighbors:\n",
-        "        innerID = similarUser[0]\n",
-        "        userSimilarityScore = similarUser[1]\n",
-        "        theirRatings = train_set.ur[innerID]\n",
-        "        for rating in theirRatings:\n",
-        "            candidates[rating[0]] += (rating[1] / 5.0) * userSimilarityScore\n",
+        "    for similar_user in k_neighbours:\n",
+        "        inner_id = similar_user[0]\n",
+        "        user_similarity_score = similar_user[1]\n",
+        "        users_own_ratings = train_set.ur[inner_id]\n",
+        "        for rating in users_own_ratings:\n",
+        "            candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "    \n",
         "    # Track items the user has already seen\n",
         "    watched = {}\n",
-        "    for itemID, rating in train_set.ur[uiid]:\n",
-        "        watched[itemID] = 1\n",
+        "    for item_id, rating in train_set.ur[uiid]:\n",
+        "        watched[item_id] = 1\n",
         "    \n",
         "    # Get top recommendations\n",
         "    pos = 0\n",
-        "    for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
-        "        if not itemID in watched:\n",
-        "            movieID = train_set.to_raw_iid(itemID)\n",
-        "            topN[int(train_set.to_raw_uid(uiid))].append((int(movieID), 0.0))\n",
+        "    for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
+        "        if not item_id in watched:\n",
+        "            movie_id = train_set.to_raw_iid(item_id)\n",
+        "            top_n[int(train_set.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
         "            pos += 1\n",
         "            if (pos > 40):\n",
         "                break"
@@ -152,7 +152,7 @@
       "outputs": [],
       "source": [
         "# Calculate and print the hit rate\n",
-        "print(\"Hit Rate:\", RecommenderMetrics.HitRate(topN, leftOutTestSet))"
+        "print(\"Hit Rate:\", RecommenderMetrics.hit_rate(top_n, loo_test_set))"
       ]
     }
   ],
