--- a/notebooks/08-DeepLearningIntro/GAN_on_Fashion_MNIST.ipynb
+++ b/notebooks/08-DeepLearningIntro/GAN_on_Fashion_MNIST.ipynb
@@ -416,18 +416,18 @@
     "@tf.function\n",
     "def trainDStep(data):\n",
     "  # the batch is (32,28,28,1), so extract 32 value\n",
-    "  batchSize = tf.shape(data)[0]\n",
+    "  batch_size = tf.shape(data)[0]\n",
     "  # create a noise vector as generator input sampled from Gaussian Random Normal\n",
     "  # As an exercise try sampling from a uniform distribution and observe the difference\n",
-    "  noise = tf.random.normal(shape=(batchSize, NOISE_DIM))\n",
+    "  noise = tf.random.normal(shape=(batch_size, NOISE_DIM))\n",
     "\n",
     "  # concatenate the real and fake labels\n",
     "  y_true = tf.concat(\n",
     "    [\n",
     "      # the original data is real, labeled with 1\n",
-    "      tf.ones(batchSize, 1),\n",
+    "      tf.ones(batch_size, 1),\n",
     "      # the forged data is fake, labeled with 0\n",
-    "      tf.zeros(batchSize, 1)\n",
+    "      tf.zeros(batch_size, 1)\n",
     "    ],\n",
     "    axis=0\n",
     "  )\n",
@@ -474,11 +474,11 @@
    "source": [
     "@tf.function\n",
     "def trainGStep(data):\n",
-    "  batchSize = tf.shape(data)[0]\n",
-    "  noise = tf.random.normal(shape=(batchSize, NOISE_DIM))\n",
+    "  batch_size = tf.shape(data)[0]\n",
+    "  noise = tf.random.normal(shape=(batch_size, NOISE_DIM))\n",
     "  # when training the generator, we want it to maximize the probability that its\n",
     "  # output is classified as real, remember the min-max game\n",
-    "  y_true = tf.ones(batchSize, 1)\n",
+    "  y_true = tf.ones(batch_size, 1)\n",
     "\n",
     "  with tf.GradientTape() as tape:\n",
     "    y_pred = discriminator(generator(noise))\n",
