--- a/notebooks/09-DeepLearning/NeuralCollaborativeFiltering.ipynb
+++ b/notebooks/09-DeepLearning/NeuralCollaborativeFiltering.ipynb
@@ -68,7 +68,7 @@
     "ratings.columns = [\"user\", \"item\", \"label\", \"time\"]\n",
     "\n",
     "movies = pd.read_csv(\"../../src/data/movies.csv\")\n",
-    "movies.columns = [\"movieID\", \"Title\", \"Genres\"]"
+    "movies.columns = [\"movie_id\", \"Title\", \"Genres\"]"
    ]
   },
   {
@@ -846,7 +846,7 @@
     "\n",
     "for index, row in filtered_rows.iterrows():\n",
     "    rating = row['label']\n",
-    "    movie = movies[movies.movieID == row['item']]\n",
+    "    movie = movies[movies.movie_id == row['item']]\n",
     "    movieTitle = movie['Title']\n",
     "    print(rating, movieTitle)"
    ]
@@ -931,7 +931,7 @@
     "# Print what these are\n",
     "myRecs = recs[1]\n",
     "for rec in myRecs:\n",
-    "    print(movies[movies.movieID == rec].Title)"
+    "    print(movies[movies.movie_id == rec].Title)"
    ]
   },
   {
