--- a/notebooks/09-DeepLearning/RBMTuning.ipynb
+++ b/notebooks/09-DeepLearning/RBMTuning.ipynb
@@ -77,8 +77,8 @@
       "source": [
         "print(\"Searching for best parameters...\")\n",
         "param_grid = {\n",
-        "    'hiddenDim': [20, 10],\n",
-        "    'learningRate': [0.1, 0.01]\n",
+        "    'hidden_dim': [20, 10],\n",
+        "    'learning_rate': [0.1, 0.01]\n",
         "}\n",
         "gs = GridSearchCV(RBM, param_grid, measures=['rmse', 'mae'], cv=3)\n",
         "\n",
@@ -114,8 +114,8 @@
         "\n",
         "# Add tuned RBM\n",
         "params = gs.best_params['rmse']\n",
-        "RBMtuned = RBM(hiddenDim=params['hiddenDim'], \n",
-        "                       learningRate=params['learningRate'])\n",
+        "RBMtuned = RBM(hidden_dim=params['hidden_dim'], \n",
+        "                       learning_rate=params['learning_rate'])\n",
         "evaluator.add_algorithm(RBMtuned, \"RBM - Tuned\")\n",
         "\n",
         "# Add untuned RBM\n",
