--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -61,22 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading movie ratings...\n",
-      "\n",
-      "Computing movie popularity ranks so we can measure novelty later...\n",
-      "Estimating biases using als...\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load up common data set for the recommender algorithms\n",
     "(_, evaluation_dataset, rankings) = MovieLens.load()\n",
@@ -116,39 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating  SVD ...\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Evaluating  Random ...\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "\n",
-      "\n",
-      "Algorithm  RMSE       MAE        HR         cHR        ARHR       Coverage   Diversity  Novelty   \n",
-      "SVD        0.9034     0.6978     0.0313     0.0313     0.0114     0.9553     0.0462     499.7955  \n",
-      "Random     1.4385     1.1478     0.0089     0.0089     0.0015     1.0000     0.0719     557.8365  \n",
-      "\n",
-      "Legend:\n",
-      "\n",
-      "RMSE:      Root Mean Squared Error. Lower values mean better accuracy.\n",
-      "MAE:       Mean Absolute Error. Lower values mean better accuracy.\n",
-      "HR:        Hit Rate; how often we are able to recommend a left-out rating. Higher is better.\n",
-      "cHR:       Cumulative Hit Rate; hit rate, confined to ratings above a certain threshold. Higher is better.\n",
-      "ARHR:      Average Reciprocal Hit Rank - Hit rate that takes the ranking into account. Higher is better.\n",
-      "Coverage:  Ratio of users for whom recommendations above a certain threshold exist. Higher is better.\n",
-      "Diversity: 1-S, where S is the average similarity score between every possible pair of recommendations\n",
-      "           for a given user. Higher means more diverse.\n",
-      "Novelty:   Average popularity rank of recommended items. Higher means more novel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluator.evaluate(True)"
    ]
@@ -156,7 +113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "RecSys",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
