--- a/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
         "model.fit(train_set)\n",
-        "simsMatrix = model.compute_similarities()"
+        "similarity_matrix = model.compute_similarities()"
       ]
     },
     {
@@ -104,27 +104,27 @@
         "\n",
         "# Get the top K items rated by the user\n",
         "testUserRatings = train_set.ur[testUserInnerID]\n",
-        "kNeighbors = heapq.nlargest(k, testUserRatings, key=lambda t: t[1])\n",
+        "k_neighbours = heapq.nlargest(k, testUserRatings, key=lambda t: t[1])\n",
         "\n",
         "# Find similar items to those rated highly by the user\n",
         "candidates = defaultdict(float)\n",
-        "for itemID, rating in kNeighbors:\n",
-        "    similarityRow = simsMatrix[itemID]\n",
-        "    for innerID, score in enumerate(similarityRow):\n",
-        "        candidates[innerID] += score * (rating / 5.0)\n",
+        "for item_id, rating in k_neighbours:\n",
+        "    similarityRow = similarity_matrix[item_id]\n",
+        "    for inner_id, score in enumerate(similarityRow):\n",
+        "        candidates[inner_id] += score * (rating / 5.0)\n",
         "\n",
         "# Track items the user has already seen\n",
         "watched = {}\n",
-        "for itemID, rating in train_set.ur[testUserInnerID]:\n",
-        "    watched[itemID] = 1\n",
+        "for item_id, rating in train_set.ur[testUserInnerID]:\n",
+        "    watched[item_id] = 1\n",
         "\n",
         "# Get and display top recommendations\n",
         "print(\"Top 10 recommendations for user\", test_subject, \":\\n\")\n",
         "pos = 0\n",
-        "for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
-        "    if not itemID in watched:\n",
-        "        movieID = train_set.to_raw_iid(itemID)\n",
-        "        print(ml.get_movie_name(int(movieID)), ratingSum)\n",
+        "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
+        "    if not item_id in watched:\n",
+        "        movie_id = train_set.to_raw_iid(item_id)\n",
+        "        print(ml.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
         "            break"
