--- a/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleUserCF.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
         "model.fit(train_set)\n",
-        "simsMatrix = model.compute_similarities()"
+        "similarity_matrix = model.compute_similarities()"
       ]
     },
     {
@@ -103,36 +103,36 @@
         "testUserInnerID = train_set.to_inner_uid(test_subject)\n",
         "\n",
         "# Find similar users\n",
-        "similarityRow = simsMatrix[testUserInnerID]\n",
+        "similarityRow = similarity_matrix[testUserInnerID]\n",
         "\n",
-        "similarUsers = []\n",
-        "for innerID, score in enumerate(similarityRow):\n",
-        "    if (innerID != testUserInnerID):\n",
-        "        similarUsers.append((innerID, score))\n",
+        "similar_users = []\n",
+        "for inner_id, score in enumerate(similarityRow):\n",
+        "    if (inner_id != testUserInnerID):\n",
+        "        similar_users.append((inner_id, score))\n",
         "\n",
-        "kNeighbors = heapq.nlargest(k, similarUsers, key=lambda t: t[1])\n",
+        "k_neighbours = heapq.nlargest(k, similar_users, key=lambda t: t[1])\n",
         "\n",
         "# Get items rated by similar users\n",
         "candidates = defaultdict(float)\n",
-        "for similarUser in kNeighbors:\n",
-        "    innerID = similarUser[0]\n",
-        "    userSimilarityScore = similarUser[1]\n",
-        "    theirRatings = train_set.ur[innerID]\n",
-        "    for rating in theirRatings:\n",
-        "        candidates[rating[0]] += (rating[1] / 5.0) * userSimilarityScore\n",
+        "for similar_user in k_neighbours:\n",
+        "    inner_id = similar_user[0]\n",
+        "    user_similarity_score = similar_user[1]\n",
+        "    users_own_ratings = train_set.ur[inner_id]\n",
+        "    for rating in users_own_ratings:\n",
+        "        candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "\n",
         "# Track items the user has already seen\n",
         "watched = {}\n",
-        "for itemID, rating in train_set.ur[testUserInnerID]:\n",
-        "    watched[itemID] = 1\n",
+        "for item_id, rating in train_set.ur[testUserInnerID]:\n",
+        "    watched[item_id] = 1\n",
         "\n",
         "# Get and display top recommendations\n",
         "print(\"Top 10 recommendations for user\", test_subject, \":\\n\")\n",
         "pos = 0\n",
-        "for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
-        "    if not itemID in watched:\n",
-        "        movieID = train_set.to_raw_iid(itemID)\n",
-        "        print(ml.get_movie_name(int(movieID)), ratingSum)\n",
+        "for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
+        "    if not item_id in watched:\n",
+        "        movie_id = train_set.to_raw_iid(item_id)\n",
+        "        print(ml.get_movie_name(int(movie_id)), rating_sum)\n",
         "        pos += 1\n",
         "        if (pos > 10):\n",
         "            break"
