--- a/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
+++ b/notebooks/11-Challenges/EvaluateUserCF-Outliers.ipynb
@@ -41,7 +41,7 @@
       "source": [
         "## Prepare Evaluation Data\n",
         "\n",
-        "Set up the evaluation data using leave-one-out cross-validation (LOOCV) to test our recommender system. This approach helps us understand how well the system performs for individual users."
+        "Set up the evaluation data using leave-one-out cross-validation (loo_iterator) to test our recommender system. This approach helps us understand how well the system performs for individual users."
       ]
     },
     {
@@ -53,8 +53,8 @@
         "evalData = EvaluationDataset(data, rankings)\n",
         "\n",
         "# Train on leave-One-Out train set\n",
-        "train_set = evalData.GetLOOCVTrainSet()\n",
-        "leftOutTestSet = evalData.GetLOOCVTestSet()"
+        "train_set = evalData.loo_train_set\n",
+        "loo_test_set = evalData.loo_test_set"
       ]
     },
     {
@@ -79,7 +79,7 @@
         "\n",
         "model = KNNBasic(sim_options=sim_options)\n",
         "model.fit(train_set)\n",
-        "simsMatrix = model.compute_similarities()"
+        "similarity_matrix = model.compute_similarities()"
       ]
     },
     {
@@ -103,41 +103,41 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Build up dict to lists of (int(movieID), predictedrating) pairs\n",
-        "topN = defaultdict(list)\n",
+        "# Build up dict to lists of (int(movie_id), predictedrating) pairs\n",
+        "top_n = defaultdict(list)\n",
         "k = 10  # Number of similar users to consider\n",
         "\n",
         "for uiid in range(train_set.n_users):\n",
         "    # Get top N similar users to this one\n",
-        "    similarityRow = simsMatrix[uiid]\n",
+        "    similarityRow = similarity_matrix[uiid]\n",
         "    \n",
-        "    similarUsers = []\n",
-        "    for innerID, score in enumerate(similarityRow):\n",
-        "        if (innerID != uiid):\n",
-        "            similarUsers.append((innerID, score))\n",
+        "    similar_users = []\n",
+        "    for inner_id, score in enumerate(similarityRow):\n",
+        "        if (inner_id != uiid):\n",
+        "            similar_users.append((inner_id, score))\n",
         "    \n",
-        "    kNeighbors = heapq.nlargest(k, similarUsers, key=lambda t: t[1])\n",
+        "    k_neighbours = heapq.nlargest(k, similar_users, key=lambda t: t[1])\n",
         "    \n",
         "    # Get the stuff they rated, and add up ratings for each item, weighted by user similarity\n",
         "    candidates = defaultdict(float)\n",
-        "    for similarUser in kNeighbors:\n",
-        "        innerID = similarUser[0]\n",
-        "        userSimilarityScore = similarUser[1]\n",
-        "        theirRatings = train_set.ur[innerID]\n",
-        "        for rating in theirRatings:\n",
-        "            candidates[rating[0]] += (rating[1] / 5.0) * userSimilarityScore\n",
+        "    for similar_user in k_neighbours:\n",
+        "        inner_id = similar_user[0]\n",
+        "        user_similarity_score = similar_user[1]\n",
+        "        users_own_ratings = train_set.ur[inner_id]\n",
+        "        for rating in users_own_ratings:\n",
+        "            candidates[rating[0]] += (rating[1] / 5.0) * user_similarity_score\n",
         "    \n",
         "    # Build a dictionary of stuff the user has already seen\n",
         "    watched = {}\n",
-        "    for itemID, rating in train_set.ur[uiid]:\n",
-        "        watched[itemID] = 1\n",
+        "    for item_id, rating in train_set.ur[uiid]:\n",
+        "        watched[item_id] = 1\n",
         "    \n",
         "    # Get top-rated items from similar users:\n",
         "    pos = 0\n",
-        "    for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
-        "        if not itemID in watched:\n",
-        "            movieID = train_set.to_raw_iid(itemID)\n",
-        "            topN[int(train_set.to_raw_uid(uiid))].append((int(movieID), 0.0))\n",
+        "    for item_id, rating_sum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
+        "        if not item_id in watched:\n",
+        "            movie_id = train_set.to_raw_iid(item_id)\n",
+        "            top_n[int(train_set.to_raw_uid(uiid))].append((int(movie_id), 0.0))\n",
         "            pos += 1\n",
         "            if (pos > 40):\n",
         "                break"
@@ -159,7 +159,7 @@
       "outputs": [],
       "source": [
         "# Measure hit rate\n",
-        "print(\"HR\", RecommenderMetrics.HitRate(topN, leftOutTestSet))"
+        "print(\"HR\", RecommenderMetrics.hit_rate(top_n, loo_test_set))"
       ]
     }
   ],
