--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -47,9 +47,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>userId</th>\n",
+              "      <th>movieId</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>31</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>1260759144</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1029</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759179</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1061</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759182</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1129</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1260759185</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1172</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1260759205</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   userId  movieId  rating   timestamp\n",
+              "0       1       31     2.5  1260759144\n",
+              "1       1     1029     3.0  1260759179\n",
+              "2       1     1061     3.0  1260759182\n",
+              "3       1     1129     2.0  1260759185\n",
+              "4       1     1172     4.0  1260759205"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
         "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
@@ -66,9 +147,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading movie ratings...\n",
+            "\n",
+            "Computing movie popularity ranks so we can measure novelty later...\n",
+            "\n",
+            "Computing item similarities so we can measure diversity later...\n",
+            "Estimating biases using als...\n",
+            "Computing the pearson_baseline similarity matrix...\n",
+            "Done computing similarity matrix.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x7daa941f0110>"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Initialize MovieLens data loader & load data\n",
         "ml, data, rankings  = MovieLens.load()\n",
@@ -89,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -110,9 +216,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "RMSE:  0.9033701087151801\n",
+            "MAE:  0.6977882196132263\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"RMSE: \", RecommenderMetrics.rmse(predictions))\n",
         "print(\"MAE: \", RecommenderMetrics.mae(predictions))"
@@ -122,14 +237,48 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Top-10 Recommendations using Leave-One-Out Cross Validation"
+        "## Evaluate Top-10 Recommendations using Leave-One-Out Cross Validation\n",
+        "\n",
+        "| Metric    |      |\n",
+        "|-----------|------|\n",
+        "| RMSE      | Root Mean Squared Error. Lower values mean better accuracy. |\n",
+        "| MAE       |  Mean Absolute Error. Lower values mean better accuracy. |\n",
+        "| HR        |   Hit Rate; how often we are able to recommend a left-out rating. Higher is better. |\n",
+        "| cHR       |  Cumulative Hit Rate; hit rate, confined to ratings above a certain threshold. Higher is better. |\n",
+        "| ARHR      | Average Reciprocal Hit Rank - Hit rate that takes the ranking into account. Higher is better. |\n",
+        "| Coverage  | Ratio of users for whom recommendations above a certain threshold exist. Higher is better. |\n",
+        "| Diversity | 1-S, where S is the average similarity score between every possible pair of recommendations for a given user. Higher means more diverse. |\n",
+        "| Novelty   |  Average popularity rank of recommended items. Higher means more novel. |"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Computing recommendations with leave-one-out...\n",
+            "Predict ratings for left-out set...\n",
+            "Predict all missing ratings...\n",
+            "Compute top 10 recs per user...\n",
+            "\n",
+            "Hit Rate:  0.029806259314456036\n",
+            "\n",
+            "rHR (Hit Rate by Rating value): \n",
+            "3.5 0.017241379310344827\n",
+            "4.0 0.0425531914893617\n",
+            "4.5 0.020833333333333332\n",
+            "5.0 0.06802721088435375\n",
+            "\n",
+            "cHR (Cumulative Hit Rate, rating >= 4):  0.04960835509138381\n",
+            "\n",
+            "ARHR (Average Reciprocal Hit Rank):  0.0111560570576964\n"
+          ]
+        }
+      ],
       "source": [
         "# Set aside one rating per user for testing\n",
         "loo_iterator = LeaveOneOut(n_splits=1, random_state=1)\n",
@@ -178,9 +327,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User coverage:  0.9552906110283159\n",
+            "Computing the pearson_baseline similarity matrix...\n",
+            "Done computing similarity matrix.\n",
+            "\n",
+            "Diversity:  0.9665208258150911\n",
+            "\n",
+            "Novelty (average popularity rank):  491.5767777960256\n"
+          ]
+        }
+      ],
       "source": [
         "algo.fit(full_train_set)\n",
         "anti_test_set = full_train_set.build_anti_testset()\n",
