--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -98,7 +98,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run the Evaluation"
+    "## Run the Evaluation\n",
+    "\n",
+    "| Metric    |      |\n",
+    "|-----------|------|\n",
+    "| RMSE      | Root Mean Squared Error. Lower values mean better accuracy. |\n",
+    "| MAE       |  Mean Absolute Error. Lower values mean better accuracy. |\n",
+    "| HR        |   Hit Rate; how often we are able to recommend a left-out rating. Higher is better. |\n",
+    "| cHR       |  Cumulative Hit Rate; hit rate, confined to ratings above a certain threshold. Higher is better. |\n",
+    "| ARHR      | Average Reciprocal Hit Rank - Hit rate that takes the ranking into account. Higher is better. |\n",
+    "| Coverage  | Ratio of users for whom recommendations above a certain threshold exist. Higher is better. |\n",
+    "| Diversity | 1-S, where S is the average similarity score between every possible pair of recommendations for a given user. Higher means more diverse. |\n",
+    "| Novelty   |  Average popularity rank of recommended items. Higher means more novel. |"
    ]
   },
   {
