--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,21 +56,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estimating biases using als...\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(_, evaluation_dataset, rankings) = MovieLens.load(verbose=True)\n",
     "\n",
-    "evaluator = Evaluator(evaluation_dataset, rankings)"
+    "evaluator = Evaluator(evaluation_dataset, rankings, verbose=True)"
    ]
   },
   {
@@ -117,81 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:AlgorithmEvaluator(SVD):Evaluating accuracy.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating  SVD ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:AlgorithmEvaluator(SVD):Evaluating top-N with leave-one-out validation.\n",
-      "INFO:AlgorithmEvaluator(SVD):Computing hit-rate and rank metrics.\n",
-      "INFO:AlgorithmEvaluator(SVD):Computing recommendations with full data set.\n",
-      "INFO:AlgorithmEvaluator(SVD):Analyzing coverage, diversity, and novelty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing the cosine similarity matrix...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:AlgorithmEvaluator(SVD):Analysis complete.\n",
-      "INFO:AlgorithmEvaluator(Random):Evaluating accuracy.\n",
-      "INFO:AlgorithmEvaluator(Random):Evaluating top-N with leave-one-out validation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done computing similarity matrix.\n",
-      "Evaluating  Random ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:AlgorithmEvaluator(Random):Computing hit-rate and rank metrics.\n",
-      "INFO:AlgorithmEvaluator(Random):Computing recommendations with full data set.\n",
-      "INFO:AlgorithmEvaluator(Random):Analyzing coverage, diversity, and novelty.\n",
-      "INFO:AlgorithmEvaluator(Random):Analysis complete.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "\n",
-      "\n",
-      "Algorithm  RMSE       MAE        HR         cHR        ARHR       Coverage   Diversity  Novelty   \n",
-      "SVD        0.9034     0.6978     0.0313     0.0313     0.0114     0.9553     0.0462     499.7955  \n",
-      "Random     1.4385     1.1478     0.0089     0.0089     0.0015     1.0000     0.0719     557.8365  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluator.evaluate(True)"
    ]
